Fixed property alignment issues

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -251,7 +251,3 @@ select.reperio-form-input {
     vertical-align: middle;
     float: none;
 }
-
-.row {
-    min-height: 48px;
-}
